# googletest-xpack

./: .gitignore  .npmignore  CHANGELOG-XPACK.md  CHANGELOG.md  CMakeLists.txt  README-MAINTAINER-XPACK.md  README-MAINTAINER.md  README.md  meson.build  package.json
.github/workflows/: CI.yml  ci.yml  gtest-ci.yml  test-all.yml
tests/: CMakeLists.txt  meson.build
tests-xpack/: CMakeLists.txt  README.md  meson.build  meson_options.txt
tests-xpack/cmake/: globals.cmake
tests-xpack/meson/globals/: meson.build
tests-xpack/platform-native/: CMakeLists.txt  meson.build
tests-xpack/platform-native/cmake/: globals.cmake
tests-xpack/platform-native/include-config/micro-os-plus/: config.h
tests-xpack/platform-native/include-platform/micro-os-plus/: platform.h
tests-xpack/platform-native/meson/: native.ini
tests-xpack/platform-native/meson/globals/: meson.build
tests-xpack/platform-qemu-mps2-an386/: CMakeLists.txt  meson.build
tests-xpack/platform-qemu-mps2-an386/cmake/: globals.cmake
tests-xpack/platform-qemu-mps2-an386/include-config/micro-os-plus/: config.h
tests-xpack/platform-qemu-mps2-an386/include-platform/micro-os-plus/: platform.h
tests-xpack/platform-qemu-mps2-an386/include-platform/micro-os-plus/platform-qemu-mps2-an386/: defines.h
tests-xpack/platform-qemu-mps2-an386/meson/globals/: meson.build
tests-xpack/scripts/: helper.sh  test-all.sh  trigger-workflow-test-all.sh
tests-xpack/src/: sample-test.cpp
tests/cmake/: globals.cmake
tests/meson/globals/: meson.build
tests/platform-native/: CMakeLists.txt  meson.build
tests/platform-native/cmake/: globals.cmake
tests/platform-native/include-config/micro-os-plus/: config.h
tests/platform-native/include-platform/micro-os-plus/: platform.h
tests/platform-native/include-platform/micro-os-plus/platform-native/: defines.h
tests/platform-native/meson/globals/: meson.build
tests/platform-qemu-mps2-an386/: CMakeLists.txt  README.md  meson.build
tests/platform-qemu-mps2-an386/cmake/: globals.cmake
tests/platform-qemu-mps2-an386/meson/globals/: meson.build
tests/scripts/: helper.sh  trigger-workflow-test-all.sh
tests/src/: sample-test.cpp
