#
# This file is part of the µOS++ distribution.
#   (https://github.com/micro-os-plus)
# Copyright (c) 2021 Liviu Ionescu
#
# Permission to use, copy, modify, and/or distribute this software
# for any purpose is hereby granted, under the terms of the MIT license.
#native, qemu-mps2, ]
# -----------------------------------------------------------------------------

option('platform-name', type : 'string', value : '', description : '[native, qemu-mps2-an386, stm32f4discovery]' )

# -----------------------------------------------------------------------------
